--- a/form.html
+++ b/form.html
@@ -4,7 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>contact form</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <form action="/nothing.php">
+        <label for="fname">First Name</label>
+        <input
+          type="text"
+          id="fname"
+          name="firstname"
+          placeholder="first name"
+        />
+
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="last name" />
+
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" placeholder="email" />
+
+        <label for="time">Best Time to Reach You?</label>
+        <select name="time" id="time">
+          <option value="Morning">Morning</option>
+          <option value="Afternoon">Afternoon</option>
+          <option value="Evening">Evening</option>
+        </select>
+
+        <label for="msg">Message</label>
+        <textarea
+          name="msg"
+          id="msg"
+          cols="30"
+          rows="10"
+          placeholder="Leave us a message here..."
+        ></textarea>
+      </form>
+    </div>
+  </body>
 </html>
