--- a/form.html
+++ b/form.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/js/form.js"></script>
     <title>contact form</title>
   </head>
   <body>
+    <div class="title">
+      <h2>Contact Us</h2>
+    </div>
     <div>
       <form action="/nothing.php">
         <label for="fname">First Name</label>
@@ -38,7 +42,11 @@
           rows="10"
           placeholder="Leave us a message here..."
         ></textarea>
+
+        <input type="button" value="submit" onclick="showtext()" />
       </form>
     </div>
+
+    <div id="show"></div>
   </body>
 </html>
