--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <br />
       <ul>
         <span>Your name</span>
-        <li id="fname"></li>
-        <li id="lname"></li>
+        <li id="fname-transfer"></li>
+        <li id="lname-transfer"></li>
         <span>Your email</span>
-        <li id="email"></li>
+        <li id="email-transfer"></li>
         <span>Your message</span>
-        <li id="msg"></li>
+        <li id="msg-transfer"></li>
       </ul>
     </div>
   </body>
